# bazelfe

./: .gitignore  Cargo.toml  README.md
.github/: auto-merge.yml  dependabot.yml
.github/ci_scripts/: prepare_output.sh
.github/workflows/: auto-merge.yml  release.yml  rust-clippy.yml  test.yml
bazelfe-bazel-wrapper/: Cargo.toml
bazelfe-bazel-wrapper/resources/tests/build_events/: no_op_build.proto
bazelfe-bazel-wrapper/src/: lib.rs
bazelfe-bazel-wrapper/src/bazel_command_line_parser/: mod.rs  options.rs
bazelfe-bazel-wrapper/src/bazel_subprocess_wrapper/: bazel_wrapper.rs  bazel_wrapper_builder.rs  bazel_wrapper_error.rs  configured_bazel_runner.rs  mod.rs  user_report_error.rs
bazelfe-bazel-wrapper/src/bep/: event_stream_listener.rs  mod.rs
bazelfe-bazel-wrapper/src/bep/build_events/: build_event_server.rs  hydrated_stream.rs  mod.rs
bazelfe-bazel-wrapper/src/bep/target_completed_tracker/: mod.rs
bazelfe-core/: Cargo.toml  LICENCE  build.rs
bazelfe-core/resources/tests/build_events/: failed_scalac_build.proto  successful_build.proto
bazelfe-core/src/: lib.rs
bazelfe-core/src/bazel_command_line_parser/: generate_bazel_command_line_app.rs  mod.rs  options.rs
bazelfe-core/src/bazel_query/: mod.rs
bazelfe-core/src/bazel_runner/: action_event_stream.rs  auto_test_action.rs  bazel_runner.rs  bazel_runner_app.rs  bazel_runner_inst.rs  command_line_rewriter_action.rs  configured_bazel_runner.rs  expand_target_to_guesses.rs  mod.rs  process_build_abort_errors.rs  process_missing_dependency_errors.rs  processor_activity.rs  sanitization_tools.rs
bazelfe-core/src/bazel_runner/auto_test_action/: app.rs  command_line_driver.rs  ctrl_char.rs  mod.rs  progress_tab_updater.rs  ui.rs  util.rs
bazelfe-core/src/bazel_runner/test_file_to_target/: mod.rs
bazelfe-core/src/bazel_runner_daemon/: bazel_runner_daemon_demo_app.rs  daemon_manager.rs  daemon_server.rs  mod.rs  query_graph.rs
bazelfe-core/src/bep_junit/: bep_junit_app.rs  failed_action.rs  junit_xml_error_writer.rs  mod.rs  test_results_ops.rs  xml_utils.rs
bazelfe-core/src/build_events/: build_event_server.rs  build_events_app.rs  hydrated_stream.rs
bazelfe-core/src/buildozer_driver/: buildozer_driver_app.rs  mod.rs
bazelfe-core/src/config/: base_config.rs  command_line_rewriter.rs  daemon_config.rs  error_processor.rs  indexer_config.rs  mod.rs
bazelfe-core/src/error_extraction/: mod.rs
bazelfe-core/src/error_extraction/java/: error_cannot_access.rs  error_cannot_find_symbol.rs  error_does_not_represent_a_declared_type.rs  error_indirect_dependency.rs  error_package_does_not_exist.rs  mod.rs
bazelfe-core/src/error_extraction/scala/: continuing_with_a_stub.rs  error_is_not_a_member_of.rs  error_is_not_a_member_of_generic.rs  error_is_not_a_member_of_package.rs  error_object_not_found.rs  error_symbol_is_missing_from_classpath.rs  error_symbol_type_missing_from_classpath.rs  error_type_not_found.rs  error_value_not_found.rs  mod.rs
bazelfe-core/src/hydrated_stream_processors/: event_stream_listener.rs  mod.rs
bazelfe-core/src/hydrated_stream_processors/index_new_results/: mod.rs
bazelfe-core/src/hydrated_stream_processors/process_bazel_failures/: command_line_runner.rs  mod.rs  process_action_failure_error.rs  process_build_abort_errors.rs  process_missing_dependency_errors.rs  process_user_defined_actions.rs  shared_utils.rs
bazelfe-core/src/hydrated_stream_processors/target_completed_tracker/: mod.rs
bazelfe-core/src/index_table/: expand_target_to_guesses.rs  index_table_value.rs  load_index_table_app.rs  mod.rs
bazelfe-core/src/jvm_indexer/: bazel_query.rs  indexer_action_event_stream.rs  jvm_indexer_app.rs  mod.rs  popularity_parser.rs  popularity_parser_app.rs
bazelfe-core/src/label_utils/: mod.rs
bazelfe-core/src/source_dependencies/: mod.rs  parser_helpers.rs
bazelfe-core/src/source_dependencies/java/: java_parser_app.rs  mod.rs
bazelfe-core/src/source_dependencies/scala/: mod.rs  scala_parser_app.rs
bazelfe-core/src/tokioext/: unix.rs
bazelfe-core/src/zip_parse/: mod.rs
bazelfe-protos/: Cargo.toml  build.rs
bazelfe-protos/proto/bazel_tools/: daemon_service.proto  upstream_service.proto
bazelfe-protos/proto/local_protos/bazel_tools/: request_files_service.proto
bazelfe-protos/proto/local_protos/bazel_tools/daemon_service/: daemon_service.proto
bazelfe-protos/proto/local_protos/bzl_remote/: bazelfe_index.proto  bazelfe_kv.proto  metadata_service.proto
bazelfe-protos/proto/remote-apis/: go.mod
bazelfe-protos/proto/upstream_other/build_event_stream/: build_event_stream.proto
bazelfe-protos/proto/upstream_other/devtools/buildozer/: api.proto
bazelfe-protos/src/: digest_utils.rs  lib.rs
bzl-remote-core/: Cargo.toml  build.rs
bzl-remote-core/src/: lib.rs
bzl-remote-core/src/binaries/cache_server/: app.rs
bzl-remote-core/src/binaries/dump_cache_data/: app.rs
bzl-remote-core/src/cache_client/: mod.rs
bzl-remote-core/src/cache_service/: action_cache_service.rs  bytestream_service.rs  capabilities_service.rs  content_addressable_storage_service.rs  fetch_service.rs  http_endpoint.rs  metadata_service.rs  mod.rs
bzl-remote-core/src/config/: base_config.rs  cache_service_config.rs  mod.rs
bzl-remote-core/src/hash/: mod.rs  sha256_value.rs
bzl-remote-core/src/server/: either_body.rs  grpc_error_trace_layer.rs  mod.rs
bzl-remote-core/src/storage_backend/: api.rs  inmemory_backend.rs  io_helpers.rs  mod.rs
bzl-remote-core/src/storage_backend/cloud_backend/: mod.rs  s3.rs  s3_cas.rs
bzl-remote-core/src/storage_backend/local_disk_backend/: action_cache.rs  content_addressable_store.rs  kv_store.rs  mod.rs
example_bazel_project/: README.md  WORKSPACE
example_bazel_project/tools/: bazel  bazel_fe_common.sh
examples/autotest/: .bazelversion  README.md  bazelisk
examples/autotest/tools/: bazel  bazel_fe_common.sh
examples/test_prompt/: .gitignore  README.md  WORKSPACE
examples/test_prompt/tools/: bazel  bazelfe_config
examples/user_defined_hooks/: README.md
examples/with_errors/: bazelisk
(+35 files in other folders)
