[package]
authors = ["Ian O'Connell <ianoc@ianoc.net>"]
edition = "2021"
license = "Apache-2.0"
name = "bazelfe-bazel-wrapper"
version = "0.1.0"

[[bin]]
name = "generate-bazel-command-line"
path = "src/bazel_command_line_parser/generate_bazel_command_line_app.rs"
required-features = ["dev-binaries"]

[dependencies]
async-channel = "2.2.1"
async-stream = "0.3.5"
async-trait = "0.1.80"
bytes = "1.6.0"
ctrlc = "3.4.4"
clap = { version = "4.5.4", features = ["derive", "env"] }
lazy_static = "1.4.0"
log = "0.4.21"
prost = "0.12.4"
prost-types = "0.12.4"
rand = "0.8.5"
serde = { version = "1.0.201", features = ["derive"] }
thiserror = "1.0.60"
fork = { version = "0.1.23", optional = true }
stdio-override = { version = "0.1.3", optional = true }
libc = "0.2.154"
crossbeam-channel = { version = "0.5.12", optional = true }
notify = { version = "6.1.1", optional = true }
tokio-serde = { version = "0.9.0", features = ["bincode"], optional = true }
tokio-util = { version = "0.7.11", features = ["compat"] }
sha2 = "0.10.8"
nix = { version = "0.28.0", features = ["signal"] }
flume = { version = "0.11.0", optional = true }
trim-margin = { version = "0.1.0", optional = true }
dashmap = { version = "5.5.3", optional = true }
tui = { version = "0.19.0", default_features = false, features = ["crossterm"], optional = true }
crossterm = "0.27.0"
muncher = { version = "0.7.0", optional = true }
tempfile = { version = "3.10.1", optional = true }
tower = "0.4.13"
mio = "0.8.11"
ptyprocess = "0.4.1"
openssl = { version = "0.10.64", features = ["vendored"] }

[build-dependencies]

[dependencies.bazelfe-protos]
path = "../bazelfe-protos"

[dependencies.futures]
default-features = false
features = ["alloc", "bilock", "unstable"]
version = "0.3.30"

[dependencies.tokio]
features = ["full"]
version = "1.37.0"

[dependencies.tokio-stream]
features = ["net"]
version = "0.1.15"

[dependencies.tonic]
features = ["tls"]
version = "0.10.2"

[dev-dependencies]
once_cell = "1.19.0"
pinky-swear = "6.2.0"
tower = "0.4.13"
tempfile = "3.10.1"

[features]
default = []
dev-binaries = []
autotest-action = ["tui", "muncher", "tempfile", "bazelfe-daemon"]
bazelfe-daemon = ["notify", "tokio-serde", "flume", "trim-margin", "dashmap", "fork", "stdio-override"]

[lib]
name = "bazelfe_bazel_wrapper"
path = "src/lib.rs"
