[package]
authors = ["Ian O'Connell <ianoc@ianoc.net>"]
edition = "2021"
license = "Apache-2.0"
name = "bazelfe-bazel-wrapper"
version = "0.1.0"

[[bin]]
name = "generate-bazel-command-line"
path = "src/bazel_command_line_parser/generate_bazel_command_line_app.rs"
required-features = ["dev-binaries"]

[dependencies]
async-channel = "2.3.1"
async-stream = "0.3.6"
async-trait = "0.1.88"
bytes = "1.10.1"
ctrlc = "3.4.7"
clap = { version = "4.5.39", features = ["derive", "env"] }
lazy_static = "1.5.0"
log = "0.4.27"
prost = "0.12.6"
prost-types = "0.12.6"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
fork = { version = "0.2.0", optional = true }
stdio-override = { version = "0.1.3", optional = true }
libc = "0.2.172"
crossbeam-channel = { version = "0.5.15", optional = true }
notify = { version = "8.0.0", optional = true }
tokio-serde = { version = "0.9.0", features = ["bincode"], optional = true }
tokio-util = { version = "0.7.15", features = ["compat"] }
sha2 = "0.10.9"
nix = { version = "0.30.1", features = ["signal"] }
flume = { version = "0.11.1", optional = true }
trim-margin = { version = "0.1.0", optional = true }
dashmap = { version = "6.1.0", optional = true }
tui = { version = "0.19.0", default_features = false, features = ["crossterm"], optional = true }
crossterm = "0.29.0"
muncher = { version = "0.7.0", optional = true }
tempfile = { version = "3.20.0", optional = true }
tower = "0.4.13"
mio = "1.0.4"
ptyprocess = "0.4.1"
openssl = { version = "0.10.73", features = ["vendored"] }

[build-dependencies]

[dependencies.bazelfe-protos]
path = "../bazelfe-protos"

[dependencies.futures]
default-features = false
features = ["alloc", "bilock", "unstable"]
version = "0.3.31"

[dependencies.tokio]
features = ["full"]
version = "1.45.1"

[dependencies.tokio-stream]
features = ["net"]
version = "0.1.17"

[dependencies.tonic]
features = ["tls"]
version = "0.10.2"

[dev-dependencies]
once_cell = "1.21.3"
pinky-swear = "6.2.0"
tower = "0.4.13"
tempfile = "3.20.0"

[features]
default = []
dev-binaries = []
autotest-action = ["tui", "muncher", "tempfile", "bazelfe-daemon"]
bazelfe-daemon = ["notify", "tokio-serde", "flume", "trim-margin", "dashmap", "fork", "stdio-override"]

[lib]
name = "bazelfe_bazel_wrapper"
path = "src/lib.rs"
