[package]
authors = ["Ian O'Connell <ianoc@ianoc.net>"]
edition = "2021"
license = "Apache-2.0"
name = "bazelfe-core"
version = "0.1.0"
build = "build.rs"

[[bin]]
name = "scala-parser"
path = "src/source_dependencies/scala/scala_parser_app.rs"
required-features = ["dev-binaries"]

[[bin]]
name = "java-parser"
path = "src/source_dependencies/java/java_parser_app.rs"
required-features = ["dev-binaries"]

[[bin]]
name = "index-table"
path = "src/index_table/load_index_table_app.rs"
required-features = ["dev-binaries"]

[[bin]]
name = "buildozer-driver"
path = "src/buildozer_driver/buildozer_driver_app.rs"
required-features = ["dev-binaries"]

[[bin]]
name = "bazel-runner-daemon-demo-app"
path = "src/bazel_runner_daemon/bazel_runner_daemon_demo_app.rs"
required-features = ["dev-binaries"]

[[bin]]
name = "bep-junit"
path = "src/bep_junit/bep_junit_app.rs"

[[bin]]
name = "jvm-indexer"
path = "src/jvm_indexer/jvm_indexer_app.rs"

[[bin]]
name = "bazel-runner"
path = "src/bazel_runner/bazel_runner_app.rs"

[dependencies]
async-channel = "1.9.0"
async-stream = "0.3.5"
async-trait = "0.1.77"
byteorder = "1.5.0"
bytes = "1.5.0"
clap = { version = "4.4.18", features = ["derive", "env"] }
ctrlc = "3.4.2"
exec = "0.3.1"
lazy_static = "1.4.0"
ignore = "0.4.20"
log = "0.4.20"
nom = "7.1.3"
openssl = { version = "0.10.63", features = ["vendored"] }
pretty_env_logger = "0.5.0"
prost = "0.12.3"
prost-types = "0.12.3"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
dynfmt = { version = "0.1.5", features = ["curly"] }
toml = "0.8.9"
time = "0.3.34"
walkdir = "2.4.0"
shellwords = "1.1.0"
zip = "0.6.6"
thiserror = "1.0.56"
fork = { version = "0.1.23", optional = true }
serde_json = "1.0.113"
stdio-override = { version = "0.1.3", optional = true }
libc = "0.2.153"
crossbeam-channel = { version = "0.5.11", optional = true }
notify = { version = "6.1.1", optional = true }
tokio-serde = { version = "0.9.0", features = ["bincode"], optional = true }
tokio-util = { version = "0.7.10", features = ["compat"] }
sha2 = "0.10.8"
nix = "0.27.1"
flume = { version = "0.11.0", optional = true }
trim-margin = { version = "0.1.0", optional = true }
dashmap = { version = "5.5.3", optional = true }
tui = { version = "0.19.0", default_features = false, features = ["crossterm"], optional = true }
crossterm = "0.27.0"
muncher = { version = "0.7.0", optional = true }
humantime = "2.1.0"
tempfile = { version = "3.10.0", optional = true }
anyhow = "1.0.79"
tower = "0.4.13"
mio = "0.8.10"
ptyprocess = "0.4.1"
xml-rs = "0.8.19"

[build-dependencies]
vergen = { version = "8.3.1", features = [ "build", "git", "gitcl" ]}
anyhow = "1.0.79"

[dependencies.bazelfe-protos]
path = "../bazelfe-protos"

[dependencies.bazelfe-bazel-wrapper]
path = "../bazelfe-bazel-wrapper"

[dependencies.futures]
default-features = false
features = ["alloc", "bilock", "unstable"]
version = "0.3.30"

[dependencies.tokio]
features = ["full"]
version = "1.36.0"

[dependencies.tokio-stream]
features = ["net"]
version = "0.1.14"

[dependencies.tonic]
features = ["tls"]
version = "0.10.2"

[dev-dependencies]
once_cell = "1.19.0"
pinky-swear = "6.2.0"
tower = "0.4.13"
tempfile = "3.10.0"

[features]
default = []
dev-binaries = []
autotest-action = ["tui", "muncher", "tempfile", "bazelfe-daemon"]
bazelfe-daemon = ["notify", "tokio-serde", "flume", "trim-margin", "dashmap", "fork", "stdio-override"]

[lib]
name = "bazelfe_core"
path = "src/lib.rs"
