[package]
name = "bazelfe-protos"
version = "0.1.0"
authors = ["Ian O'Connell <ianoc@ianoc.net>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
tonic = { version = "0.10.2", features = ["tls"] }
prost = "0.12.6"
# Required for wellknown types
prost-types = "0.12.6"
sha2 = "0.10.9"
thiserror = "2.0.14"
openssl = { version = "0.10.73", features = ["vendored"] }

[dependencies.tokio]
features = ["full"]
version = "1.45.1"

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }


[dev-dependencies]
tempfile = "3.20.0"
