[package]
authors = ["Ian O'Connell <ianoc@ianoc.net>"]
edition = "2021"
license = "Apache-2.0"
name = "bzl-remote-core"
version = "0.1.0"
build = "build.rs"

[[bin]]
name = "cache-server"
path = "src/binaries/cache_server/app.rs"


[[bin]]
name = "dump-cache-data"
path = "src/binaries/dump_cache_data/app.rs"


[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.80"
byteorder = "1.5.0"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
base64 = "0.22.1"
lazy_static = "1.4.0"
openssl = { version = "0.10.64", features = ["vendored"] }
tracing = "0.1.40"
tracing-attributes = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "env-filter"] }
prost = "0.12.4"
prost-types = "0.12.4"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.201", features = ["derive"] }
serde_derive = "1.0.152"
toml = "0.8.12"
thiserror = "1.0.60"
libc = "0.2.154"
crossbeam-channel = { version = "0.5.12" }
tokio-util = { version = "0.7.11", features = ["compat"] }
sha2 = "0.10.8"
flume = { version = "0.11.0" }
dashmap = { version = "5.5.3" }
time = "0.3.36"
tempfile = { version = "3.10.1" }
anyhow = "1.0.83"
tower = { version = "0.4" }
log = "0.4.21"
hyper = "0.14.27"
hyper-tls = "0.5.0"
sled = "0.34.7"
memmap2 = "0.9.4"
aws-sdk-s3 = "0.34.0"
aws-config = "0.56.1"
aws-smithy-http = "0.56.1"
redis = { version = "0.25.3", features = ["tokio-comp", "connection-manager"] }
urlencoding = "2.1.3"
http = "0.2.11"
http-body = "0.4.5"
sysinfo = "0.30.12"


[build-dependencies]
vergen = { version = "8.3.1", features = [ "build", "git", "gitcl" ]}
anyhow = "1.0.83"

[dependencies.bazelfe-protos]
path = "../bazelfe-protos"

[dependencies.futures]
default-features = false
features = ["alloc"]
version = "0.3.30"

[dependencies.tokio]
features = ["full"]
version = "1.37.0"

[dependencies.tokio-stream]
features = ["net"]
version = "0.1.15"

[dependencies.tonic]
features = ["tls"]
version = "0.10.2"

[dev-dependencies]
once_cell = "1.19.0"
pinky-swear = "6.2.0"
tower = "0.4.13"
tempfile = "3.10.1"

[features]
default = []
dev-binaries = []

[lib]
name = "bzl_remote_core"
path = "src/lib.rs"
